[tool.poetry]
name = "py_race_cond"
version = "0.1.0"
description = ""
authors = ["Vincent Thirouin <vincent.thirouin@epita.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.4"
gunicorn = "^21.2.0"
flask = "^3.0.2"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
